[metadata]
name = cors_serve
summary = CORS Serving with Python HTTP
description-file =
author = Loreto Parisi
author-email = loreto@musixmatch.com
home-page = 
classifier =

[files]
packages =
    cors_serve

[entry_points]
console_scripts =
    cors_serve = cors_serve:main

[wheel]
universal = 1

